--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
     "handlebars": "^4.0.4",
     "merge": "^1.2.0",
     "through2": "^2.0.0"
+  },
+  "devDependencies": {
+    "async": "^2.4.1",
+    "gulp": "^3.9.1",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-unzip": "^0.2.0",
+    "minimatch": "^3.0.4"
   }
 }
